[tool.black]
line-length = 119
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
  | accounts/migrations/0001_initial.py
  | polls/migrations/0001_initial.py
  | ^.*\b(migrations)\b.*$
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 119

[tool.poetry]
name = "flaskblog"
version = "v0.11"
description = "A microblog based on the Flask web framework"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.7.6"
blinker = "1.4"
click = "8.0.3"
Deprecated = "1.2.13"
dnspython = "2.2.0"
dominate = "2.6.0"
elastic-transport = "8.0.1"
elasticsearch = "8.0.0"
email-validator = "1.1.3"
Flask = "2.0.2"
Flask-Bootstrap = "3.3.7.1"
Flask-HTTPAuth = "4.5.0"
Flask-Login = "0.5.0"
Flask-Mail = "0.9.1"
Flask-Migrate = "3.1.0"
Flask-Moment = "1.0.2"
Flask-SQLAlchemy = "2.5.1"
Flask-WTF = "1.0.0"
greenlet = "1.1.2"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
Mako = "1.1.6"
MarkupSafe = "2.0.1"
packaging = "21.3"
PyJWT = "2.3.0"
pyparsing = "3.0.7"
python-dateutil = "2.8.2"
python-dotenv = "0.19.2"
python-editor = "1.0.4"
redis = "4.1.4"
rq = "1.10.1"
six = "1.16.0"
SQLAlchemy = "1.4.31"
visitor = "0.1.3"
Werkzeug = "2.0.3"
wrapt = "1.13.3"
WTForms = "3.0.1"

[tool.poetry.dev-dependencies]
certifi = "2021.10.8"
chardet = "4.0.0"
charset-normalizer = "2.0.12"
defusedxml = "0.7.1"
Faker = "13.2.0"
httpie = "3.0.2"
idna = "3.3"
multidict = "6.0.2"
Pygments = "2.11.2"
PySocks = "1.7.1"
requests = "2.27.1"
requests-toolbelt = "0.9.1"
urllib3 = "1.26.8"
pre-commit = "^2.18.1"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
