[metadata]
name = flaskblog
version = v0.11
description = A microblog based on the Flask web framework
long_description = file: README.md
url = https://github.com/kevinbowen777/flaskblog/
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    Framework :: Flask :: 2.0.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    migrations/versions/2866cab8d2c6_new_fields_in_user_model.py,
    migrations/versions/2970ab6257a1_tasks.py,
    migrations/versions/2972822f24b3_private_messages.py,
    migrations/versions/33bc310a3f5e_posts_table.py,
    migrations/versions/48178226be6a_user_tokens.py,
    migrations/versions/5702581db6dc_notifications.py,
    migrations/versions/5f4fe5977665_users_table.py,
    migrations/versions/aee78877cc2d_add_language_to_posts.py,
    migrations/versions/ee488fcf4ee5_followers.py,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-line-length = 119
per-file-ignores =
    # __init__ exports names
    app/errors/__init__.py: F401
    app/__init__.py: F401
    app/main/__init__.py: F401
    app/api/__init__.py: F401
    app/auth/__init__.py: F401
    app/fake.py: F401
    # See: https://www.flake8rules.com/rules/W503.html
    app/api/users.py: W503
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
